// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveArticleFlag should render the base live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH WFEid"
    >
      <div
        class="sc-bxivhb fnsGfe"
      >
        ■
      </div>
      <div>
        <span
          class="sc-EHOje jboioV"
        >
          BASE
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the breaking article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH WFEid"
    >
      <div
        class="sc-bxivhb fnsGfe"
      >
        ■
      </div>
      <div>
        <span
          class="sc-EHOje jboioV"
        >
          BREAKING
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH WFEid"
    >
      <div
        class="sc-bxivhb fnsGfe"
      >
        ■
      </div>
      <div>
        <span
          class="sc-EHOje jboioV"
        >
          LIVE
        </span>
      </div>
    </div>
  </div>
</body>
`;
